# mee4ios

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  mee-ios-client (iOS).entitlements  mee-ios-client--iOS--Info.plist  xc-universal-binary.sh
Mee Credential Provider/: CredentialProviderViewController.swift  Info.plist  Mee_Credential_Provider.entitlements
Mee Credential Provider/components/: Buttons.swift
Mee Safari Extension/: SafariWebExtensionHandler.swift
Mee Safari Extension/Resources/: background.js  content.js  popup.html  popup.js
Shared/: ContentView.swift  mee_ios_clientApp.swift
Shared/components/: Background.swift  Checkbox.swift  ConsentDuration.swift  ConsentEntry.swift  Expander.swift  InputField.swift  Line.swift  LoadingCircle.swift  MainButton.swift  PasswordGenerator.swift  PasswordGeneratorList.swift  Text.swift  (+7 more)
Tests iOS/: Tests_iOS.swift
Tests macOS/: Tests_macOS.swift
ios-app/: MeeCoreTests.swift  MeeHeader.h  NavigationViewModelTests.swift  README.md  clientTests.swift  constants.swift  mee-ios-client (iOS).entitlements  mee-ios-client--iOS--Info.plist  passParameterToAppOverAppstore.md
mee-ios-client.xcodeproj/: project.pbxproj
mee_agent/: .env  Cargo.toml  README.md  build.rs  uniffi.toml
mee_agent/src/: lib.rs  mee.udl
mee_crypto/: Cargo.toml  README.md
mee_ds_sqlite/: .env  Cargo.toml  README.md  script.sql
mee_ds_sqlite/data/: mee.sqlite
mee_ds_sqlite/migrations/2022-09-17-122129_init_schema/: down.sql  up.sql
mee_ds_sqlite/src/: lib.rs  models.rs  schema.rs
mee_oidc/: Cargo.toml  README.md
(+291 files in other folders)
