[package]
authors = ["Alex Yuhimenko <alexanderyuhimenko@gmail.com>"]
edition = "2021"
name = "mee_ds_sqlite"
version = "0.1.0"

[lib]
doc = false

[build]
target = ["aarch64-apple-ios-sim", "x86_64-apple-ios", "aarch64-apple-ios"]

[dependencies]
diesel = {version = "2.0", features = ["sqlite", "chrono", "r2d2"]}
dotenvy = "0.15"
lazy_static = "1"
thiserror = "1"
uniffi = "0.21.0"
uniffi_macros = "0.21.0"
once_cell = "1.15"
# r2d2 = "0.8"

[dev-dependencies]
actix-rt = "*"

# [profile.release]
# codegen-units = 1
# lto = "fat"
# opt-level = 3